# resume-tailor-ai

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  run.py  run_dev.ps1  run_dev.sh
app/: __init__.py  config.py  health.py  logging_config.py  main.py  middleware.py  settings.py
logs/: .gitkeep
scripts/: dev.py  setup.sh
tests/: __init__.py  test_config.py  test_cors.py  test_health.py  test_health_integration.py  test_logging_pytest.py
